@startuml
'https://plantuml.com/class-diagram

/' Fill out your book retail system design by
adding classes, relationships, and methods
'/


class Book{
-ProductInformation
-author
-length
+getAsin()
+getTitle()
+getAuthor()
+getDescription()
+getImageUrls()
+getLength()
+calculateSimilarity(Book other)
+getGoodReadsReview()
+getCustomerReviews()
+getBookishReview()
}
class ProductInformation{
-asin
-displayName
-description
-imageUrls
+getAsin()
+getDisplayname()
+getDescription()
+getImageUrls
+calculateSimilarity(ProductInformation)
}

class Product{
-customerReview
-goodReadsReview
-bookishReview
+getCustomerReviews()
+getGoodReadsReview()
+getBookishReview()
}

enum Categories {

}
Book -- ProductInformation
Book -- Product
@enduml
